--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,6 +11,7 @@
 //<Колір>===============================================================================================
 $color_title: rgba(14, 190, 217, 1);
 $white-transparent: rgba(rgb(255, 255, 255), 0.9);
+$black-transparent: rgba(rgb(0, 0, 0), 0.9);
 $purple: #883cda;
 $black-btn: #141516;
 $purple-white: #cb9bff;
@@ -128,7 +129,9 @@ body {
 
 .fullscreen {
 	height: 80vh;
-	
+	&__container {
+		
+	}
 	&__video {
 		@include position-block(absolute, 0, 0);
 		z-index: -1;
@@ -136,10 +139,12 @@ body {
 		height: 100%;
 		object-fit: cover;
 		opacity: 0.96;
-		background: $white-transparent;
+		background-color:#fff;
 		background-attachment: fixed;
-}
+	}
 	&__block-content {
+		position: relative;
+		z-index: 2;
 		margin: 15vh 0 0 0;
 		max-width: 85rem;
 		display: flex;
@@ -148,10 +153,9 @@ body {
 	}
 	&__title {
 		font-size: 6.6rem;
-		line-height: 6.3rem;
+		line-height: 6.9rem;
 		font-weight: 500;
 		color: $white-transparent;
-		opacity: 0.82;
 		text-align: left !important;
 		text-transform: none !important;
 		overflow: hidden;
@@ -165,7 +169,7 @@ body {
 	&__subtitle {
 		color: rgba(255, 255, 255);
 		max-width: 65rem;
-		font-size: 1.6rem;
+		font-size: 1.7rem;
 		line-height: 2.5rem;
 		z-index: 1;
 		animation: text-animate 1.3s ease-out 1.3s both;
@@ -184,7 +188,17 @@ body {
 		max-width: 23.5rem;
 	}
 }
-
+.video{
+	&__blur{
+		@include position-block(absolute, 0, 0);
+		top: 0;
+		left: 0;
+		z-index: 1;
+		width: 100%;
+		height: 100%;
+		background-color:rgba(0, 0, 0, 0.19) !important;
+	}
+}
 //GLOBAL_TITLE===================================================================================================================================
 .block-title {
 	&__column {
