update gallery section and update style form

--- a/src/components/login/form/form.scss
+++ b/src/components/login/form/form.scss
@@ -21,10 +21,11 @@
 }
 .form {
 	width: 40rem;
-	height: 40rem;
+	// height: 40rem;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+	gap: 3rem;
 	div,
 	label,
 	input,
