--- a/src/components/pagination/paginator.scss
+++ b/src/components/pagination/paginator.scss
@@ -14,14 +14,14 @@
 		}
 	}
 	a {
-		font-size: 18px;
+		font-size: 22px;
 		color: $color_title;
 		display: flex;
 		justify-content: center;
 		align-items: center;
 		cursor: pointer;
-		width: 50px;
-		height: 50px;
+		width: 60px;
+		height: 60px;
 		text-align: center;
 		border-radius: 50%;
 	}
@@ -30,5 +30,11 @@
 		a {
 			color: #fff;
 		}
+	}
+}
+.previous, .next{
+	background: $gr_blue-white;
+	a {
+		color: #fff;
 	}
 }
