--- a/src/scss/popup.scss
+++ b/src/scss/popup.scss
@@ -2,15 +2,16 @@
 .popup {
 	-webkit-overflow-scrolling: touch;
 	z-index: 100;
-	padding: 30px 10px;
-	position: absolute;
+	padding: 10px 10px;
+	position: fixed;
 	top: 0px;
 	left: 0;
 	width: 100%;
 	height: 100%;
 	transition: visibility 0.8s ease 0s;
 	visibility: hidden;
-	background-color: #333;
+	overflow: hidden;
+	// background-color: #333;
 	&::before {
 		content: "";
 		background-color: rgba(0, 0, 0, 0.9);
@@ -46,35 +47,49 @@
 	// .popup__content
 	&__content {
 		display: flex;
-		flex-direction: column;
-		align-items: center;
-		min-height: 100%;
-		flex: 1 1 auto;
-		width: 100%;
-		display: flex;
+		position: relative;
 		justify-content: center;
 		align-items: center;
+		z-index: 110;
+		// min-height: 100%;
+		// height: 100%;
+		flex: 1 1 100%;
+		width: 100%;
 	}
 	// .popup__body
 	&__body {
 		transform: scale(0);
 		transition: all 0.3s ease 0s;
-		background-color: #666;
-		padding: 50px;
-		width: 100%;
-		max-width: 800px;
+		// background-color: #666;
+		padding: 40px;
+		// width: 100%;
+		// display: flex;
+		// justify-content: center;
+		// align-items: center;
 	}
 	// .popup__close
 	&__close {
-		width: 15px;
-		height: 15px;
+		width: 45px;
+		height: 45px;
 		position: absolute;
-		top: 0px;
-		right: 0px;
+		top: 2.6rem;
+		right: -2rem;
 		cursor: pointer;
-		z-index: 30;
+		z-index: 130;
 		// background: url("../img/icons/close.svg") 0 0 no-repeat;
+	}
+	&__img{
+		// display: flex;
+		max-width: 100%;
+		height: 88vh;
+		// flex: 1 1 100%;
+		object-fit: contain;
 	}
 }
 //====================================================================================================
 //====================================================================================================
+@media (max-width:$md3+px){
+	.popup {
+		display: none;
+	}
+}
