--- a/src/scss/svgSprite.scss
+++ b/src/scss/svgSprite.scss
@@ -3,7 +3,7 @@
 	height: 6.5rem;
 }
 .svg-Arrow-dims {
-	width: 1.462rem ;
+	width: 1.462rem;
 	height: 1.821rem;
 	// display: inline-block;
 	// margin: 0.5rem 0 0 0.4rem;
@@ -65,6 +65,14 @@
 			stroke: rgb(252, 49, 49);
 			fill: rgb(252, 49, 49);
 		}
+	}
+}
+.svg-like-active {
+	path {
+		transition: all 0.3s ease 0s;
+		stroke-width: 5;
+		stroke: rgb(252, 49, 49) !important;
+		fill: rgb(252, 49, 49) !important;
 	}
 }
 .svg-views-news-dims {
