--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,5 +1,4 @@
 .header {
-	// background-color: rgba(34, 49, 66,0.7);
 	width: 100%;
 	position: sticky;
 	top: 0;
@@ -20,7 +19,7 @@
 			bottom: 0;
 			left: 0;
 			z-index: 50;
-			background-color: rgba(34, 49, 66,0.7);
+			background-color: rgba(34, 49, 66, 0.7);
 		}
 	}
 
@@ -55,7 +54,7 @@
 		display: flex;
 		flex-wrap: wrap;
 		// width: 35rem;
-		justify-content: end;
+		justify-content: flex-end;
 		gap: 2rem;
 		padding: 0 1.5rem 0 1.5rem;
 	}
@@ -80,10 +79,9 @@
 	&__sign-in {
 		a:hover {
 			transition: all 0.3s ease-in-out 0s;
-			// color: $purple;
 		}
 	}
-	&__sign-in-on{
+	&__sign-in-on {
 		color: white;
 		background-color: #5ed347;
 		padding: 1rem;
@@ -123,18 +121,16 @@
 		height: 6.5rem;
 		margin: 0 0.5rem 0 1.2rem;
 	}
-	&__svg{
+	&__svg {
 		width: 40px;
 		transition: all 0.3s ease 0s;
-		@media (max-width:$md3+px){
-			 width: 30px; 
+		@media (max-width:#{$md3 + px}) {
+			width: 30px;
 		}
 	}
 }
 
 .items {
-
-
 	&__menu {
 		display: flex;
 		justify-content: center;
@@ -142,43 +138,37 @@
 		flex-wrap: wrap;
 		gap: 3rem;
 		transition: all 0.4s ease-in-out 0s;
-		@media (max-width:#{$md3 + px}){
+		@media (max-width:#{$md3 + px}) {
 			display: flex;
 			margin: 0 1rem;
 			gap: 2rem;
 			align-items: center;
-			 justify-content: space-between; 
+			justify-content: space-between;
 		}
-		
 	}
 	&__item {
-		
 		font-size: 1.9rem;
-		
-		@media (max-width:$md3+px){
-			padding: 1rem 0 1rem 0; 
+
+		@media (max-width:#{$md3 + px}) {
+			padding: 1rem 0 1rem 0;
 		}
 		a {
 			display: inline-flex;
 			align-items: center;
-			// color: transparentize($black-transparent, 0.02);
 			font-weight: 700;
 			transition: all 0.4s ease-in-out 0s;
-		
 		}
 
-		@media (max-width:#{$md3 + px}){
+		@media (max-width:#{$md3 + px}) {
 			margin: 0 0rem 0 0;
-		padding: 0.5rem 0.5rem;
-		font-size: 1.9rem;
-			span{
+			padding: 0.5rem 0.5rem;
+			font-size: 1.9rem;
+			span {
 				display: none;
 			}
-			
 		}
 	}
 }
-
 .items {
 	&__item {
 		position: relative;
@@ -203,12 +193,12 @@
 	animation: submenu 0.6s 1 ease-out alternate;
 	background: $gr_blue-blackBlue;
 	background-color: $color_after_gradient;
-	@media (max-width:#{$md3 + px}){
+	@media (max-width:#{$md3 + px}) {
 		background-color: rgba(34, 49, 66, 1);
 		width: 30rem;
 		top: -15.5rem;
-	left: -9rem;  
-	font-size: 2rem !important;
+		left: -9rem;
+		font-size: 2rem !important;
 	}
 	.arrow-global {
 		transform: rotate(0deg) !important;
@@ -223,8 +213,8 @@
 		}
 		padding: 1rem;
 		font-size: 1.5rem;
-		@media (max-width:#{$md3 + px}){
-			font-size: 3rem !important; 
+		@media (max-width:#{$md3 + px}) {
+			font-size: 3rem !important;
 			padding: 2.4rem 1.5rem;
 		}
 		a {
@@ -235,7 +225,7 @@
 		}
 	}
 }
-#sub-menu-color{
+#sub-menu-color {
 	box-shadow: none !important;
 	a {
 		color: transparentize($white-transparent, 0.15) !important;
