--- a/src/scss/popup.scss
+++ b/src/scss/popup.scss
@@ -11,7 +11,6 @@
 	transition: visibility 0.8s ease 0s;
 	visibility: hidden;
 	overflow: hidden;
-	// background-color: #333;
 	&::before {
 		content: "";
 		background-color: rgba(0, 0, 0, 0.9);
@@ -51,8 +50,6 @@
 		justify-content: center;
 		align-items: center;
 		z-index: 110;
-		// min-height: 100%;
-		// height: 100%;
 		flex: 1 1 100%;
 		width: 100%;
 	}
@@ -60,12 +57,7 @@
 	&__body {
 		transform: scale(0);
 		transition: all 0.3s ease 0s;
-		// background-color: #666;
 		padding: 40px;
-		// width: 100%;
-		// display: flex;
-		// justify-content: center;
-		// align-items: center;
 	}
 	// .popup__close
 	&__close {
@@ -76,19 +68,16 @@
 		right: -2rem;
 		cursor: pointer;
 		z-index: 130;
-		// background: url("../img/icons/close.svg") 0 0 no-repeat;
 	}
-	&__img{
-		// display: flex;
+	&__img {
 		max-width: 100%;
 		height: 88vh;
-		// flex: 1 1 100%;
 		object-fit: contain;
 	}
 }
 //====================================================================================================
 //====================================================================================================
-@media (max-width:$md3+px){
+@media (max-width:#{$md3 + px}) {
 	.popup {
 		display: none;
 	}
