--- a/src/components/document/document.scss
+++ b/src/components/document/document.scss
@@ -154,6 +154,7 @@
 
 		font-size: 1.5rem;
 		letter-spacing: 0.1rem;
+		color: $black-transparent !important;
 	}
 }
 
@@ -168,6 +169,7 @@
 	padding: 1.2rem 1.7rem !important;
 	font-size: 1.5rem;
 	letter-spacing: 0.1rem;
+	color: $black-transparent !important;
 }
 .input-text {
 	flex: 1 1 auto;
