--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -58,7 +58,12 @@
 	}
 
 	&__title {
-	
+		animation: title-animate 1.3s ease-out;
+	text-transform: uppercase;
+	text-align: center;
+		span {
+			color: $color_title-white-blue;
+		}
 	}
 
 	&__block-list {
@@ -66,15 +71,14 @@
 	}
 
 	&__list {
-
 	}
 
 	&__item {
 		font-size: 1.7rem;
 		line-height: 3.7rem;
-		@media (max-width:#{$md3 + px}){
-			 font-size: 2.3rem; 
-			 line-height: 4.7rem;
+		@media (max-width:#{$md3 + px}) {
+			font-size: 2.3rem;
+			line-height: 4.7rem;
 		}
 		a {
 			color: #fff;
