--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,7 +10,7 @@
 //</Подключаем шрифты>=======================================================================================
 //<Колір>===============================================================================================
 $color_title-white-blue: rgba(14, 190, 217, 1);
-$color_title: #0D7C91;
+$color_title: #0d7c91;
 $white-transparent: rgba(rgb(255, 255, 255), 0.9);
 $black-transparent: rgba(rgb(0, 0, 0), 0.9);
 $purple: #883cda;
@@ -176,14 +176,20 @@ body {
 //FULLSCREEN========================================================================================================================================================
 
 .fullscreen {
-	height: 80vh;
+	height: 46vh;
+	@media (max-width:#{$md4 + px}) {
+		height: 30.3vh;
+	}
 	&__container {
 	}
 	&__video {
 		@include position-block(absolute, 0, 0);
 		z-index: -1;
 		width: 100%;
-		height: 100%;
+		height: 60%;
+		@media (max-width:#{$md4 + px}) {
+			height: 40%;
+		}
 		object-fit: cover;
 		opacity: 0.96;
 		background-color: white;
@@ -192,11 +198,14 @@ body {
 	&__block-content {
 		position: relative;
 		z-index: 2;
-		margin: 15vh 0 0 0;
-		max-width: 85rem;
+		margin: 10vh 0 0 0;
+		max-width: 120rem;
 		display: flex;
 		flex-direction: column;
-		gap: 3.2rem;
+		gap: 5.9rem;
+		@media (max-width:#{$md4 + px}) {
+			margin: 6vh 0 0 0;
+		}
 	}
 	&__title {
 		font-size: 6.6rem;
@@ -214,9 +223,11 @@ body {
 	}
 	&__subtitle {
 		color: rgba(255, 255, 255);
-		max-width: 65rem;
-		font-size: 1.7rem;
-		line-height: 2.5rem;
+		max-width: 85rem;
+		font-size: 2.2rem;
+		line-height: 2.6rem;
+		font-weight: 500;
+		font-style: italic;
 		z-index: 1;
 		animation: text-animate 1.3s ease-out 1.3s both;
 		opacity: 0;
@@ -227,7 +238,12 @@ body {
 			background-color: rgba(34, 49, 66, 0.5);
 		}
 		@media (max-width:#{$md3 + px}) {
-			font-size: 1.8rem;
+			font-size: 14px;
+			
+		}
+		span {
+			text-transform: uppercase !important;
+			color: $color_title-white-blue !important;
 		}
 	}
 	&__button {
@@ -241,32 +257,32 @@ body {
 		left: 0;
 		z-index: 1;
 		width: 100%;
-		height: 100%;
+		height: 60%;
 		// background-color: rgba(0, 0, 0, 0.19) ;
 		animation: blur-fullscreen 1s linear 1 normal running 0s forwards;
+		@media (max-width:#{$md4 + px}) {
+			height: 40%;
+		}
 	}
 }
 @keyframes blur-fullscreen {
-	0%{
+	0% {
 		background-color: transparent !important;
 	}
-	90%{
+	90% {
 		background-color: transparent !important;
 	}
-	100%{
-		background-color: rgba(0, 0, 0, 0.2) ;
+	100% {
+		background-color: rgba(0, 0, 0, 0.2);
 	}
 }
 //GLOBAL_TITLE===================================================================================================================================
 .block-title {
 	&__column {
-		margin: 1rem 0 5rem 0;
+		margin: 55px 0 5rem 0;
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		@media (max-width:#{$md3 + px}) {
-			margin: 3rem 0 3rem 0;
-		}
 	}
 	&__title {
 		margin: 2rem 0 2rem 0;
@@ -280,10 +296,12 @@ body {
 	&__text {
 		max-width: 87rem;
 		text-align: center;
-		font-size: 1.7rem;
+		font-size: 2rem;
 		animation: card-content-animate 1.3s ease-out;
 		@media (max-width:#{$md3 + px}) {
-			font-size: 2rem;
+			font-size: 13.5px;
+			letter-spacing: 0.25rem;
+			font-style: italic;
 		}
 	}
 }
@@ -345,18 +363,22 @@ body {
 	&__text {
 		animation: card-content-animate 1.3s ease-out;
 		max-width: 60rem;
-		font-size: 1.7rem;
+		font-size: 2rem;
 		margin: 0 2rem;
 		@media (max-width:#{$md3 + px}) {
-			font-size: 2rem;
-			letter-spacing: 0.19rem;
+			font-size: 13.5px;
+			letter-spacing: 0.25rem;
 			font-weight: 400;
+			font-style: italic;
 		}
 	}
 
 	&__button {
 		animation: card-content-animate 1.3s ease-out;
 		max-width: 50rem;
+		@media (max-width:#{$md3 + px}){
+			  font-size: 2.3rem;
+		}
 	}
 }
 
@@ -906,6 +928,15 @@ body {
 		transform: scale(1.04);
 		box-shadow: 0px 2rem 2rem $color_after_gradient;
 	}
+	@media (max-width:#{$md4 + px}){
+		background-color: $color_after_gradient; 
+		box-shadow: 0px 1rem 1rem $color_after_gradient;
+		&:hover {
+			background-color: none;
+			transform: none;
+			box-shadow: none;
+		}
+	}
 }
 .btn-del {
 	width: 100%;
@@ -1034,7 +1065,7 @@ body {
 	font-size: 1.9rem;
 	text-align: center;
 	@media (max-width:#{$md3 + px}) {
-		font-size: 2rem;
+		font-size: 2.6rem;
 	}
 	&__item {
 		line-height: 3.7rem;
