--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -917,6 +917,7 @@ body {
 	align-items: center;
 	text-align: center;
 	transition: all 0.3s ease 0s;
+	cursor: pointer;
 	border: 0.1rem solid #fff;
 	border-radius: 3.5rem;
 	padding: 1.6rem 2.3rem;
