--- a/src/components/document/document.scss
+++ b/src/components/document/document.scss
@@ -51,8 +51,8 @@
 		animation: ifra 0.6s 1 ease-in-out forwards;
 		margin: 1rem 0;
 		border-radius: 2rem;
-		&__block{
-			&:hover{
+		&__block {
+			&:hover {
 				background-color: #fff;
 			}
 		}
@@ -108,15 +108,18 @@
 			background: linear-gradient(to bottom, rgb(255, 24, 24) 0%, rgba(0, 0, 0, 0.5) 100%) !important;
 		}
 	}
+	&__select-btn {
+		width: 30rem;
+	}
 	//style form
 	&__form-block {
 		width: 100%;
 		height: 100%;
+		border-top: 0.2rem solid #747474;
 	}
 }
 
 .progress-bar {
-	
 	width: 100%;
 	height: 10px;
 	position: fixed;
@@ -124,20 +127,30 @@
 	left: 0;
 	z-index: 10;
 	background: transparent;
+}
 
-  }
-  
-  .progress {
+.progress {
 	height: 100%;
 	position: relative;
-	background: rgb(110,201,218);
-	background: linear-gradient(90deg, rgba(110,201,218,1) 0%, rgba(0,255,106,1) 20%, rgba(110,201,218,1) 34%, rgba(0,255,106,1) 53%, rgba(110,201,218,1) 71%, rgba(0,255,106,1) 91%);
+	background: rgb(110, 201, 218);
+	background: linear-gradient(
+		90deg,
+		rgba(110, 201, 218, 1) 0%,
+		rgba(0, 255, 106, 1) 20%,
+		rgba(110, 201, 218, 1) 34%,
+		rgba(0, 255, 106, 1) 53%,
+		rgba(110, 201, 218, 1) 71%,
+		rgba(0, 255, 106, 1) 91%
+	);
 	width: 0%;
 	opacity: 0;
 	transition: all 2s ease-in-out 0s;
-  }
+}
 
 .document-form {
+	height: 100%;
+	display: flex;
+	padding: 1rem;
 	&__row-block {
 		margin: 0 0 2rem 0;
 		width: 100%;
@@ -151,7 +164,6 @@
 		gap: 2rem;
 	}
 	&__btn {
-
 		font-size: 1.5rem;
 		letter-spacing: 0.1rem;
 		color: $black-transparent !important;
@@ -176,46 +188,16 @@
 	div,
 	label,
 	input,
+	ul > li,
 	p {
 		font-size: 1.5rem;
 		letter-spacing: 0.1rem;
 	}
 }
 
-.dev-text{
-	input{
-		font-size: 12px;
-			letter-spacing: 0.1rem;
-	}
+.css-kk1bwy-MuiButtonBase-root-MuiMenuItem-root{
+	font-size: 1.7rem !important;
 }
-.dev-btn{
-	display: inline-block;
-	margin-left: 10px;
-	margin-top: 5px;
-	color: white;
-	border: 1px solid white;
-	padding: 10px;
-	border-radius: 20px;
-}
-.dev-btn-opac{
-	opacity: 0.5;
-	&:hover{
-		opacity: 1;
-	}
-}
-.dev-click{
-	background-color: transparent !important;
-	cursor: pointer;
-	&:hover{
-		background-color: #d7d7d7;
-	}
-}
-.dev-form{
-	display: flex;
-	align-items: center;
-}
-.dev-flex{
-	// display: flex;
-	// flex-direction: column;
-	gap: 5px;
+.toast-container{
+	font-size: 1.5rem;
 }
