--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -686,7 +686,8 @@ body {
 	}
 	&__content {
 		overflow: hidden;
-		margin: 3.5rem 2.5rem;
+		margin: 1rem;
+		text-align: center;
 	}
 	&__title {
 		text-transform: none !important;
@@ -700,14 +701,15 @@ body {
 		}
 	}
 	&__subtitle {
+		width: 100%;
 		display: inline-block;
 		background: rgb(94, 203, 239);
 		color: $white-transparent;
 		border-radius: 2rem;
-		padding: 0.5rem 1rem;
 		font-size: 1.8rem;
 		font-style: italic;
-		margin: 0.5rem 0.5rem;
+		margin: 0.3rem 0rem;
+		padding: 0.5rem 1.5rem;
 		text-align: center;
 
 		@media (max-width:#{$md4 + px}) {
