start desining card news

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -159,6 +159,8 @@ body {
 // @import "../components/gallery/swiper";
 @import "../components/gallery/skeleton";
 @import "../components/pagination/paginator";
+@import "../components/Post/postCategory";
+
 @import "./popup";
 @import "./btnLike";
 @import "notFound";
