--- a/src/components/Post/postCategory.scss
+++ b/src/components/Post/postCategory.scss
@@ -8,15 +8,64 @@
 }
 
 .card-category-item {
-	background: rgba(0, 0, 0, 0.7) !important;
+	position: relative;
+	border: 1px solid rgba(255, 255, 255, 0.5);
 	font-size: 2.9rem;
 	color: $color_title-white-blue;
 	letter-spacing: 1.9px;
 	display: flex;
 	width: 14rem;
-	height: 17rem;
+	height: 20rem;
 	flex: 0 1 33.33%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	overflow: hidden !important;
+	transition: all 0.3s ease 0s;
+	cursor: pointer;
+	border-radius: 1rem;
+	box-shadow: 0px 0px 3rem 0.3rem rgba(0, 0, 0, 0.2);
+
+	&:hover {
+		box-shadow: 0px 0px 3rem 0.5rem rgba(255, 255, 255, 0.6);
+		.card-category-item__img {
+			transform: scale(1.04);
+			filter: blur(0px);
+		}
+		&::before {
+			background: rgba(42, 83, 103, 0.1) !important; /* Зміна фону при наведенні */
+		}
+	}
+	&::before {
+		content: " ";
+		transition: all 0.3s ease 0s;
+		background: rgba(24, 50, 63, 0.4) !important;
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+	}
+
+	&__img {
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		top: 0;
+		left: 0;
+		z-index: -1;
+		transition: all 0.3s ease 0s;
+		filter: blur(1.5px);
+		object-fit: cover;
+	}
+	&__title{
+		align-content: center;
+		width: 100%;
+		height: 100%;
+		text-align: center;
+		margin: 1rem 2rem;
+		color: rgba(255, 255, 255,0.9);
+		z-index: 1;
+	}
+	
 }
