--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -160,6 +160,7 @@ body {
 @import "../components/gallery/skeleton";
 @import "../components/pagination/paginator";
 @import "../components/Post/postCategory";
+@import "../components/Post/CardMore/cardOne";
 
 @import "./popup";
 @import "./btnLike";
@@ -724,8 +725,8 @@ body {
 //========================================================================================================================================================
 .cover-news {
 	width: 100%;
-
 	position: relative;
+	padding: 12rem 0 0 0;
 	&::before {
 		content: "";
 		width: 100%;
@@ -734,7 +735,7 @@ body {
 		top: 0;
 		left: 0;
 		z-index: -1;
-		background: $gr_blue-white;
+		background: $gr_blue-white; 
 	}
 	&__block {
 		width: 80%;
@@ -764,32 +765,38 @@ body {
 // }
 .section-news-card {
 	max-width: 50rem;
+	max-height: 70rem;
 	animation: card-content-animate 1.3s ease-out;
 	position: relative;
 	margin: 2rem 0.5rem;
 
 	&__row {
 		max-width: inherit;
-		&::before {
-			content: " ";
-			@include position-block(absolute, 0, 0);
-			z-index: -1;
-			width: 100%;
-			height: 100%;
-			background-color: rgba(255, 255, 255, 1);
-			box-shadow: 0rem 0rem 0.5rem rgba(154, 154, 154, 0.6);
-			border-radius: 1.5rem;
-			filter: blur(0.1rem);
-		}
+		height: 100%;
+		display: flex;
+		flex-direction: column;
+		// &::before {
+		// 	content: " ";
+		// 	@include position-block(absolute, 0, 0);
+		// 	z-index: -1;
+		// 	width: 100%;
+		// 	height: 100%;
+		// 	background-color: rgba(255, 255, 255, 1);
+		// 	box-shadow: 0rem 0rem 0.5rem rgba(154, 154, 154, 0.6);
+		// 	border-radius: 1.5rem;
+		// 	filter: blur(0.1rem);
+		// }
+		background-color: rgba(255, 255, 255, 1);
+		box-shadow: 0rem 0rem 0.5rem rgba(154, 154, 154, 0.6);
+		border-radius: 1.5rem;
 	}
 	&__photo {
 		width: 100%;
-		height: 32rem;
 		min-height: 7rem;
 		position: relative;
 		min-width: 18rem;
 		overflow: hidden;
-		flex: 1 1 25%;
+		flex: 1 0 45%;
 		cursor: pointer;
 	}
 	&__img {
@@ -800,12 +807,13 @@ body {
 		border-top-right-radius: 1.5rem;
 	}
 	&__block {
+		width: 100%;
 		padding: 3rem 2rem;
 		position: relative;
+		flex: 1 1 50%;
 
 		// transition: all 0.3s ease-in 0s;
 		// transform: translateY(-5rem);
-		width: 100%;
 		// &::before {
 		// 	content: " ";
 		// 	@include position-block(absolute, 0, 0);
@@ -834,16 +842,17 @@ body {
 		height: 100%;
 		display: flex;
 		flex-direction: column;
+		align-content: space-between;
 		gap: 2rem;
 	}
 	&__title {
 		display: inline;
 		margin: 1rem 0 0 0;
 		text-align: start !important;
-		font-size: 3.5rem;
+		font-size: 2.7rem;
 		font-weight: 700;
 		text-transform: none !important;
-		line-height: 4.5rem;
+		line-height: 3.7rem;
 	}
 	&__subtitle {
 		flex: 1 1 100%;
